Fixed gaps on about profile cards.

--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,7 @@ a:visited {
 }
 
 .grid {
-  margin-top: -50px;
+  margin-top: -40px;
 }
 
 .profile {
